cargo-features = ["profile-rustflags"]
[package]
name = "neonwhite_seed_finder"
version = "0.1.1"
edition = "2024"
authors = ["hacatu"]
description = "Find and simulate seeds for neon white level rushes"
repository = "https://github.com/hacatu/neonwhite_seed_finder"
license = "MPL-2.0"

[profile.dev]
rustflags = ["-Clink-arg=-L/usr/local/lib", "-Zthreads=8"]

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"
rustflags = ["-Ctarget-cpu=native", "-Clink-arg=-L/usr/local/lib", "-Zthreads=8"]

[profile.release-trapv]
inherits = "release"
overflow-checks = true

[dependencies]
anyhow = "1.0.102"
bit-set = "0.8.0"
itertools = "0.14.0"
ocl = "0.19.7"
rayon = "1.11.0"

